Send latency message periodically and handle in frontends.

--- a/src/main/resources/static/vessel/index.html
+++ b/src/main/resources/static/vessel/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Mock-up vessel</title>
     <script src="vessel.js"></script>
 </head>
 <body>
-<input type="text" id="name"><input id="connectButton" type="button" value="Connect" onclick="connect()">
+<input id="connectButton" type="button" value="Connect" onclick="connect()">
 <div id="messages"></div>
-<input type="text" id="message">
-<input type="button" value="send" onclick="sendToGroupChat()">
 </body>
 </html>
