--- a/src/main/resources/static/vessel/index.html
+++ b/src/main/resources/static/vessel/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <input id="connectButton" type="button" value="Connect" onclick="connect()">
+    <input id="disconnectButton" type="button" value="Disconnect" onclick="disconnect()" disabled>
     <div id="messages"></div>
 </body>
 </html>
