Display connected vessels in frontend.

--- a/src/main/resources/static/frontend/index.html
+++ b/src/main/resources/static/frontend/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <input type="text" id="name"><input id="connectButton" type="button" value="Connect" onclick="connect()">
+    <div id="vessels"></div>
     <div id="messages"></div>
-    <input type="text" id="message">
-    <input type="button" value="send" onclick="sendToGroupChat()">
 </body>
 </html>
