Make WebSocketMessageHandler use the new VrgpMessage class.

--- a/src/main/resources/static/frontend/index.html
+++ b/src/main/resources/static/frontend/index.html
@@ -9,7 +9,7 @@
     <script src="frontend.js"></script>
 </head>
 <body>
-    <input type="text" id="name"><input id="connectButton" type="button" value="Connect" onclick="connect()">
+    <input id="connectButton" type="button" value="Connect" onclick="connect()">
     <div id="vessels"></div>
     <div id="messages"></div>
 </body>
