--- a/src/main/resources/static/vessel/index.html
+++ b/src/main/resources/static/vessel/index.html
@@ -11,6 +11,7 @@
 <body>
     <input id="connectButton" type="button" value="Connect" onclick="connect()">
     <input id="disconnectButton" type="button" value="Disconnect" onclick="disconnect()" disabled>
+    <input id="conningButton" type="button" value="Send conning" onclick="sendConning()" disabled>
     <div id="messages"></div>
 </body>
 </html>
